--- a/src/pages/quick-start.astro
+++ b/src/pages/quick-start.astro
@@ -303,10 +303,7 @@ import AssessmentQuiz from "../components/AssessmentQuiz.astro";
                                         <p
                                             class="text-base-content opacity-70 text-sm mb-3"
                                         >
-                                            <strong
-                                                >> PACIFIC UNIVERSITY TEAM:</strong
-                                            > Add Harney County School District Counseling
-                                            Center and other local emergency contacts
+                                            Need local help? Visit the <a href="/get-help/#providers" class="link link-primary">Harney County School District&nbsp;Student Services</a> or <a href="/get-help/#providers" class="link link-primary">Symmetry&nbsp;Care&nbsp;Inc.&nbsp;24/7&nbsp;Crisis&nbsp;Response</a> sections in our local resources.
                                         </p>
                                         <a
                                             href="/get-help/"
